--- a/饥人谷实战15-2/index.html
+++ b/饥人谷实战15-2/index.html
@@ -21,7 +21,7 @@
 				<h1 class="logo"><a href="javascript:;">Start Bootstrap</a></h1>
 			</div>
 		</div>
-		<div class="intro-text layout">
+		<div class="intro-text">
 			<h2>Welcome To Our Studio!</h2>
 			<p >IT'S NICE TO MEET YOU</p>
 			<a href="#" class="btn btn-more">TELL ME MORE</a>
@@ -257,20 +257,22 @@
 					<li><input type="text" name="email" placeholder="YOUR EMAIL *" class="info"></li>
 					<li><input type="text" name="tel" placeholder="YOUR PHONE *" class="info"></li>
 				</ul>
-				<textarea class="message info" placeholder="YOUR MESSAGE *"></textarea>
-				<a href="#" class="btn btn-more">TELL ME MORE</a>
+				<div><textarea  class="message info" placeholder="YOUR MESSAGE *"></textarea></div>	
+				<div> <bottn class="btn btn-more">TELL ME MORE</bottn> </div>
 			</form>
 		</div>
 	</div>
 	<!-- footer -->
 	<div id="footer" class="layout clearfixed">
-		<p class="copyright">Copyright © Your Website 2014</p>
-		<ul class="contact-icon">
-			<li><a class="general-icon iconfont icon-147263962143twitter"></a></li>
-			<li><a class="general-icon iconfont icon-147265415446facebook"></a></li>
-			<li><a class="general-icon iconfont icon-in"></a></li>
-		</ul>
-		<p class="using-declarative"><a href="#">Privacy Policy</a>&nbsp;&nbsp;&nbsp;<a href="#">Terms of Use</a></p>
+		<div class="layout">
+			<p class="copyright">Copyright © Your Website 2014</p>
+			<ul class="contact-icon">
+				<li><a class="general-icon iconfont icon-147263962143twitter"></a></li>
+				<li><a class="general-icon iconfont icon-147265415446facebook"></a></li>
+				<li><a class="general-icon iconfont icon-in"></a></li>
+			</ul>
+			<p class="using-declarative"><a href="#">Privacy Policy</a>&nbsp;&nbsp;&nbsp;<a href="#">Terms of Use</a></p>
+		</div>
 	</div>
 </body>
 </html>
